cmake_minimum_required(VERSION 3.24)
project(cpp_course)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/Users/alvaro/Desktop/YouTube/proyectos/cpp_course")

add_executable(cpp_course src/dataTypes.cpp src/operations.cpp src/conditionalStructure.cpp src/iterativeStructures.cpp src/iterativeStructures.cpp src/control1.cpp)
